# Kestrel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh  execute.sh  release_compile.sh  run_test.sh
Kestrel/: CMakeLists.txt
Kestrel/shader/: basic.frag  basic.json  basic.tesc  basic.tese  basic.vert  terrain.frag  terrain.json  terrain.tesc  terrain.tese  terrain.vert
Kestrel/src/: kstpch.hpp
Kestrel/src/Core/: Application.cpp  Application.h  Application.hpp  File.cpp  File.hpp  Input.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Platform.cpp  Platform.hpp  Util.hpp  Window.cpp  Window.hpp  main.cpp
Kestrel/src/Debug/: Profiler.hpp
Kestrel/src/Event/: Event.cpp  Event.hpp  Events.cpp  Events.hpp
Kestrel/src/Platform/: GLFWWindow.cpp  GLFWWindow.hpp
Kestrel/src/Platform/Vulkan/: Base.cpp  Base.hpp  VKCameraRenderer.cpp  VKCameraRenderer.hpp  VKContext.cpp  VKContext.hpp  VKImgui.cpp  VKImgui.hpp  VKMaterial.cpp  VKMaterial.hpp  VKMesh.cpp  VKMesh.hpp  VKShader.cpp  VKShader.hpp  VKTerrain.cpp  VKTerrain.hpp  VKTerrainRenderer.cpp  VKTerrainRenderer.hpp  VKVertex.cpp  VKVertex.hpp  VK_Basic_Terrain.cpp  VK_Basic_Terrain.hpp
Kestrel/src/Renderer/: Camera.cpp  Camera.hpp  CameraModes.cpp  CameraModes.hpp  Context.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  NaiveCamera.cpp  NaiveCamera.hpp  Terrain.cpp  Terrain.hpp
Kestrel/src/Resource/: Resource.hpp
Kestrel/src/Scene/: Components.cpp  Components.hpp  Entity.hpp  Scene.cpp  Scene.hpp  SceneFileScene.cpp  SceneFileScene.hpp  TerrainScene.cpp  TerrainScene.hpp
Kestrel/src/VM/: VM.cpp  VM.hpp  Variables.cpp  Variables.hpp
Sandbox/: CMakeLists.txt
Sandbox/res/scenes/: scene1.sce  scene2.sce
Sandbox/src/: Sandbox.cpp  Sandbox.h  Sandbox.hpp  SandboxLayer.cpp  SandboxLayer.hpp
